--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   </ol><hr/>
   <li> 2주 </li>
   <ol>
-  <li><a href="https://rhtnwjd3335.github.io/java/1_2_1.html">변학도실습 desktop/moblie용(1_2_1.html)</a></li>
-  <li><a href="https://rhtnwjd3335.github.io/java/1_2_2.html">변학도실습 desktop용(1_2_2.html)</a></li>
+  <li><a href="https://rhtnwjd3335.github.io/2_1_1.html">Hello JSP 프로그램</a></li>
   </ol><hr/>
   </ul>
 </body></html>
