--- a/2_1_1.html
+++ b/2_1_1.html
@@ -12,6 +12,8 @@
 <body>
   <h2>Eclipse 초기 실행</h2>
     <h3>소스 코드</h3>
-  <img src="https://rhtnwjd3335.github.io/jsp_hello.jpg">
+  <img src="https://rhtnwjd3335.github.io/2_1_1.jpg">
+    <h3>실행 예시</h3>
+  <img src="https://rhtnwjd3335.github.io/2_1_2.jpg">
 </body>
 </html>
