--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <li> 2주 </li>
   <ol>
   <li><a href="https://rhtnwjd3335.github.io/2_1_1.html">Hello JSP 프로그램</a></li>
+  <li><a href="https://rhtnwjd3335.github.io/sampleAll.html">sampleAll</a></li>
+  <li><a href="https://rhtnwjd3335.github.io/sampleAllMod.html">sampleAllMod</a></li>
   </ol><hr/>
   </ul>
 </body></html>
