--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   </ol><hr/>
   <li> 2주 </li>
   <ol>
-    <li><a href="https://rhtnwjd3335.github.io/java/formCheckbox1.html">formCheckbox1</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/java/formText1.html">formText1</a></li>
     <li><a href="https://rhtnwjd3335.github.io/java/formRadio1.html">formRadio1</a></li>
-    <li><a href="https://rhtnwjd3335.github.io/java/formText1.html">formText1</a></li>
-    <li><a href="https://rhtnwjd3335.github.io/java/formText1.html">formText1</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/java/formCheckbox1.html">formCheckbox1</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/2_1_1.html">Hello JSP 프로그램</a></li>
+    <li><a href=https://rhtnwjd3335.github.io/2_2_1.html>Include Color</a></li>
   </ol><hr/>
   </ul>
 </body></html>
