--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
   </style></head>
 <body>
-<h1>000 과제 리스트</h3>
+<h1>과제 리스트</h3>
   <ul><hr/>
   <li> 1주 </li>
   <ol>
@@ -20,7 +20,7 @@
     <li><a href="https://rhtnwjd3335.github.io/sampleAll.html">sampleAll</a></li>
     <li><a href="https://rhtnwjd3335.github.io/sampleAllMod.html">sampleAllMod</a></li>
   </ol><hr/>
-  <li> 2주 </li>
+  <li> 3주 </li>
   <ol>
     <li><a href="https://rhtnwjd3335.github.io/java/formText1.html">formText1</a></li>
     <li><a href="https://rhtnwjd3335.github.io/java/formRadio1.html">formRadio1</a></li>
