--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
     <li><a href="https://rhtnwjd3335.github.io/2_1_1.html">Hello JSP 프로그램</a></li>
     <li><a href=https://rhtnwjd3335.github.io/3_2_1.html>Include Color</a></li>
   </ol><hr/>
+  <li> 4주 </li>
+  <ol>
+    <li><a href="https://rhtnwjd3335.github.io/4_1_1.html">forward+para 실습</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/4_2_1.html">scriptTest</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/4_3_1.html">scriptMethod</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/4_4_1.html">userResponse</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/4_5_1.html">resRedirect</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/4_6_1.html">userOut</a></li>
+  </ol><hr/>  
   </ul>
 </body></html>
