--- a/4_5_1.html
+++ b/4_5_1.html
@@ -12,9 +12,9 @@
 <body>
   <h2>4주차 과제</h2>
     <h3>소스 코드</h3>
-  <img src="https://rhtnwjd3335.github.io/4_5_1.jpg">
-  <img src="https://rhtnwjd3335.github.io/4_5_2.jpg">
+  <img src="https://rhtnwjd3335.github.io/4_5_1.JPG">
+  <img src="https://rhtnwjd3335.github.io/4_5_2.JPG">
     <h3>실행 예시</h3>
-  <img src="https://rhtnwjd3335.github.io/4_5_3.jpg">
+  <img src="https://rhtnwjd3335.github.io/4_5_3.JPG">
 </body>
 </html>
