--- a/4_6_1.html
+++ b/4_6_1.html
@@ -12,8 +12,8 @@
 <body>
   <h2>4주차 과제</h2>
     <h3>소스 코드</h3>
-  <img src="https://rhtnwjd3335.github.io/4_6_1.jpg">
+  <img src="https://rhtnwjd3335.github.io/4_6_1.JPG">
     <h3>실행 예시</h3>
-  <img src="https://rhtnwjd3335.github.io/4_6_2.jpg">
+  <img src="https://rhtnwjd3335.github.io/4_6_2.JPG">
 </body>
 </html>
