--- a/index.html
+++ b/index.html
@@ -37,5 +37,14 @@
     <li><a href="https://rhtnwjd3335.github.io/4_5_1.html">resRedirect</a></li>
     <li><a href="https://rhtnwjd3335.github.io/4_6_1.html">userOut</a></li>
   </ol><hr/>  
+  <li> 5주 </li>
+  <ol>
+    <li><a href="https://rhtnwjd3335.github.io/project1.html">난수 2개</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/project2.html">1~입력값 합계</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/project3.html">작은값~큰값 합계</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/project4.html">소수</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/project5.html">거리</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/project6.html">로또</a></li>
+  </ol><hr/>     
   </ul>
 </body></html>
