--- a/blogin.html
+++ b/blogin.html
@@ -6,7 +6,7 @@
 <title>JavaBeans 테스트</title>
 </head>
 <body>
-<form action="blogin.jsp" get="post">
+<form action="blogin.jsp" method="get">
 이름을 입력해주세요..<br></br>
 <input type="text" name="userName">
 <input type="submit" value="확  인">
