--- a/project4.html
+++ b/project4.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <form action="project4.jsp" method="post">
-<label for ="num">입력 숫자:</label>
-<input type="text" name="num"><br>
+<label for ="n">입력 숫자:</label>
+<input type="text" name="n"><br>
 <input type="submit" value="확  인">
 </form>
 </body>
