--- a/project6.html
+++ b/project6.html
@@ -7,6 +7,19 @@
 </head>
 <body>
 <form action="project6.jsp" method="post">
+<label for ="1">1:</label>
+<input type="text" name="1"><br>
+<label for ="2">2:</label>
+<input type="text" name="2"><br>
+<label for ="3">3:</label>
+<input type="text" name="3"><br>
+<label for ="4">4:</label>
+<input type="text" name="4"><br>
+<label for ="5">5:</label>
+<input type="text" name="5"><br>
+<label for ="6">6:</label>
+<input type="text" name="6"><br>
+<input type="submit" value="확  인">
 </form>
 </body>
 </html>
