--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <li><a href="https://rhtnwjd3335.github.io/project4.html">소수</a></li>
     <li><a href="https://rhtnwjd3335.github.io/project5.html">거리</a></li>
     <li><a href="https://rhtnwjd3335.github.io/project6.html">로또</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/5_1_1.html">난수 2개</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/5_2_1.html">1~입력값 합계</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/5_3_1.html">작은값~큰값 합계</a></li>
   </ol><hr/>     
   </ul>
 </body></html>
