--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
     <li><a href="https://rhtnwjd3335.github.io/project4.html">소수</a></li>
     <li><a href="https://rhtnwjd3335.github.io/project5.html">거리</a></li>
     <li><a href="https://rhtnwjd3335.github.io/project6.html">로또</a></li>
-
-
-    
   </ol><hr/>     
+    <li> 6주 </li>
+  <ol>
+    <li><a href="https://rhtnwjd3335.github.io/6_1_1.html">스코프 실습</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/6_2_1.html">세션 실습</a></li>
+  </ol><hr/> 
   </ul>
 </body></html>
