--- a/index.html
+++ b/index.html
@@ -54,5 +54,9 @@
     <li><a href="https://rhtnwjd3335.github.io/6_1_1.html">스코프 실습</a></li>
     <li><a href="https://rhtnwjd3335.github.io/6_2_1.html">세션 실습</a></li>
   </ol><hr/> 
+    <li> 7주 </li>
+  <ol>
+    <li><a href="https://rhtnwjd3335.github.io/7_1_1.html">mydb 스크랩북</a></li>
+  </ol><hr/> 
   </ul>
 </body></html>
