--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
   </ol><hr/> 
     <li> 7주 </li>
   <ol>
-    <li><a href="https://rhtnwjd3335.github.io/7_1_1.html">mydb 스크랩북</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_0_1.html">mydb 스크랩북</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_1_1.html">select_passwd</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_1_2.html">select_passwd</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_2_1.html">update_passwd</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_2_2.html">update_passwd</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_3_1.html">select_passwd2</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_3_2.html">select_passwd2</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_4_1.html">update_passwd2</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/7_4_2.html">update_passwd2</a></li>
   </ol><hr/> 
   </ul>
 </body></html>
