--- a/7_1_1.html
+++ b/7_1_1.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- 7_0_1.html -->
+<!doctype html> <!-- 7_1_1.html -->
 <html>
 <head>
   <meta charset="utf-8"/>
@@ -11,7 +11,9 @@
 </head>
 <body>
   <h2>7주차 과제</h2>
-    <h3>화면</h3>
-  <img src="https://rhtnwjd3335.github.io/7_0_1.jpg">
+    <h3>소스코드</h3>
+  <img src="https://rhtnwjd3335.github.io/7_1_1.jpg">
+    <h3>실행화면</h3>
+  <img src="https://rhtnwjd3335.github.io/7_1_2.jpg">
 </body>
 </html>
