--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   </ol><hr/> 
         <li> 11주 </li>
   <ol>
-    <li><a href="https://rhtnwjd3335.github.io/11_1_1.html">로그인 실습_틀</a></li>
-    <li><a href="https://rhtnwjd3335.github.io/11_2_1.html">로그인 실습</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/11_1_1.html">bean home</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/11_2_1.html">bean reg</a></li>
   </ol><hr/> 
   </ul>
 </body></html>
