--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <ol>
     <li><a href="https://rhtnwjd3335.github.io/11_1_1.html">bean home</a></li>
     <li><a href="https://rhtnwjd3335.github.io/11_2_1.html">bean reg</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/11_3_1.html">studuser</a></li>
   </ol><hr/> 
   </ul>
 </body></html>
