--- a/index.html
+++ b/index.html
@@ -68,5 +68,14 @@
     <li><a href="https://rhtnwjd3335.github.io/11_2_1.html">bean reg</a></li>
     <li><a href="https://rhtnwjd3335.github.io/11_3_1.html">studuser</a></li>
   </ol><hr/> 
+            <li> 12주 </li>
+  <ol>
+    <li><a href="https://rhtnwjd3335.github.io/12_1_1.html">bean login</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/12_2_1.html">bean mem</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/12_3_1.html">bean logout</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/12_4_1.html">bean find</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/12_5_1.html">bean result</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/12_6_1.html">bean reg2</a></li>    
+  </ol><hr/> 
   </ul>
 </body></html>
