--- a/java/formText1.html
+++ b/java/formText1.html
@@ -3,7 +3,7 @@
 <title>폼 학습</title></head>
 <body>
 <section>
-<form action="formText1.jsp" method="post">
+<form action="java/formText1.jsp" method="post">
 <fieldset>
 <legend>사용자 정보</legend>
 <label for="namex">아이디</label>
