--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   </ol><hr/>
   <li> 3주 </li>
   <ol>
-    <li><a href="https://rhtnwjd3335.github.io/java/formText1.html">formText1</a></li>
-    <li><a href="https://rhtnwjd3335.github.io/java/formRadio1.html">formRadio1</a></li>
-    <li><a href="https://rhtnwjd3335.github.io/java/formCheckbox1.html">formCheckbox1</a></li>
-    <li><a href="https://rhtnwjd3335.github.io/2_1_1.html">Hello JSP 프로그램</a></li>
-    <li><a href=https://rhtnwjd3335.github.io/3_2_1.html>Include Color</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/3_1_1.html">formText1</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/3_2_1.html">formRadio1</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/3_3_1.html">formCheckbox1</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/3_4_1.html">Hello JSP 프로그램</a></li>
+    <li><a href="https://rhtnwjd3335.github.io/3_5_1.html">Include Color</a></li>
   </ol><hr/>
   <li> 4주 </li>
   <ol>
