--- a/3_2_1.html
+++ b/3_2_1.html
@@ -16,5 +16,8 @@
   <img src="https://rhtnwjd3335.github.io/3_2_2.jpg">
     <h3>실행 예시</h3>
   <img src="https://rhtnwjd3335.github.io/3_2_3.jpg">
+  <img src="https://rhtnwjd3335.github.io/3_2_4.jpg">
+  <img src="https://rhtnwjd3335.github.io/3_2_5.jpg">
+  <img src="https://rhtnwjd3335.github.io/3_2_6.jpg">
 </body>
 </html>
